--- a/3-dribbble-menu/src/index.html
+++ b/3-dribbble-menu/src/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <title>Dribbble Navigation Menu</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap">
   </head>
   <body>
+    <div id="app"></div>
+    <script src="./index.js"></script>
     <nav class="main-navigation">
       <a class="main-navigation-logo-link" href="#">
         <img src="assets/logo.png" />
